# Ai_code-review

./: .gitmodules  railway.json  requirements.txt  requirements.uv.txt  vercel.json
api/: auth.py  class_.py  main.py  model.py  pyproject.toml
api/chroma_db/: chroma.sqlite3
api/improve_code_ai_backend.egg-info/: SOURCES.txt  requires.txt
backend/: .env  main.py  model.py
backend/improve_code_ai_backend.egg-info/: PKG-INFO  top_level.txt
backend/memory_db/: chroma.sqlite3
