[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "improve-code-ai-backend"
version = "0.1.0"
description = "Backend for AI-powered code review tool"
authors = [{ name = "Paladiya Mohit", email = "mohitpaladiya150@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy",
    "alembic"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
]
